--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Paris Green theme",
     "publisher": "richiebzzzt",
     "icon": "images/icon.png",
-    "version": "0.0.4",
+    "version": "0.0.6",
     "engines": {
         "vscode": "^1.51.0"
     },
@@ -22,6 +22,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/RichieBzzzt/Parisienne.git"
+        "url": "https://github.com/RichieBzzzt/Parisienne"
     }
 }
