--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Paris Green theme",
     "publisher": "richiebzzzt",
     "icon": "images/icon.png",
-    "version": "0.1.1",
+    "version": "<<version_number>>",
     "engines": {
         "vscode": "^1.51.0"
     },
@@ -22,6 +22,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/RichieBzzzt/Parisienne"
+        "url": "https://github.com/RichieBzzzt/Parisienne/"
     }
+
 }
