--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Paris Green theme",
     "publisher": "richiebzzzt",
     "icon": "images/icon.png",
-    "version": "<<version_number>>",
+    "version": "0.1.11",
     "engines": {
         "vscode": "^1.51.0"
     },
