Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -28,6 +28,7 @@ steps:
     inputs:
       targetType: 'inline'
       script: |
+        echo $PAT
         git config user.email "richie@bzzzt.io"
         git config user.name "RichieBzzzt"
         sudo npm install -g vsce
